test/visibility/empty/exceptEverything.good
exceptEverything.chpl:12: In function 'main':
exceptEverything.chpl:16: error: unresolved call 'foo()'
